# agenttrace

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agenttrace.prd.md
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.devcontainer/clickhouse-init/: init.sql
.github/: PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
actions/setup-agenttrace/: README.md  action.yml
api/: .env.example  .golangci.yml  Dockerfile  Makefile  coverage.out  go.mod  go.sum  gqlgen.yml  models_gen.go
api/cmd/server/: deps.go  deps_databases.go  deps_handlers.go  deps_repositories.go  deps_services.go  main.go  routes.go
api/cmd/worker/: main.go
api/docs/: DEPLOYMENT.md  DISASTER_RECOVERY.md  LOAD_TESTING.md  MONITORING.md  embed.go  openapi.yaml
api/internal/config/: config.go  loader.go
api/internal/domain/: anomaly.go  apikey.go  audit.go  checkpoint.go  cirun.go  dataset.go  doc.go  enums.go  evaluator.go  experiment.go  fileoperation.go  github_app.go  gitlink.go  notification.go  observation.go  organization.go  otel.go  project.go  prompt.go  prompt_library.go  replay.go  score.go  sso.go  terminalcommand.go  trace.go  user.go
api/internal/dto/: auth.go  doc.go  helper.go  organization.go  project.go  score.go
api/internal/handler/: anomaly.go  apikeys.go  apikeys_test.go  audit.go  auth.go  auth_test.go  checkpoints.go  ciruns.go  datasets.go  datasets_test.go  doc.go  docs.go  evaluators.go  events.go  experiments.go  export.go  fileoperations.go  github_webhook.go  gitlinks.go  health.go  health_test.go  helpers.go  import.go  import_test.go  ingestion.go  ingestion_test.go  nlquery.go  organizations.go  organizations_test.go  otel.go  projects.go  projects_test.go  prompt_library.go  prompts.go  prompts_test.go  replay.go  scores.go  scores_test.go  sso.go  terminalcommands.go  (+3 more)
api/internal/middleware/: auth.go  auth_test.go  (+9 more)
api/schema/: dataset.graphql  evaluator.graphql  organization.graphql  prompt.graphql  schema.graphql
ci/gitlab/: README.md  agenttrace.yml
deploy/: .env.example  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.yml
deploy/clickhouse/: users.xml
deploy/kubernetes/: README.md  api.yaml  clickhouse.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policies.yaml  postgres.yaml  redis.yaml  secrets.yaml.example  worker.yaml
docs/: RELEASE_PROCESS.md  docusaurus.config.ts  package.json  sidebars.ts  tsconfig.json
docs/adrs/: ADR-001-go-fiber-backend.md  ADR-002-dual-database-strategy.md  ADR-003-agent-first-schema.md  ADR-004-multi-sdk-strategy.md  ADR-005-asynq-background-jobs.md  ADR-006-layered-architecture.md  ADR-007-hybrid-graphql-rest.md  ADR-008-dual-authentication.md  ADR-009-async-cost-calculation.md  ADR-010-nextjs-bff.md  README.md
docs/docs/: introduction.md  troubleshooting.md
examples/: README.md
examples/autogen-chat/: README.md  main.py  requirements.txt
examples/crewai-team/: README.md  main.py  requirements.txt
examples/go-agent-workflow/: README.md  go.mod  main.go
examples/hello-world/: README.md
examples/langchain-agent/: README.md  main.py  requirements.txt
examples/typescript-openai/: README.md  main.ts  package.json  tsconfig.json
extensions/grafana-datasource/: README.md  package.json
extensions/jetbrains/: build.gradle.kts
extensions/jupyter/: README.md  install.json  package.json  pyproject.toml
extensions/jupyter/agenttrace_jupyter/: __init__.py  _version.py  handlers.py
extensions/jupyter/jupyter-config/server-config/: agenttrace_jupyter.json
extensions/jupyter/src/: handler.ts  index.ts
extensions/jupyter/style/: index.css
extensions/vscode/: README.md  package.json  tsconfig.json
scripts/: e2e-setup.sh
sdk/cli/: go.mod  go.sum  main.go
sdk/go/: agenttrace.go  agenttrace_benchmark_test.go  agenttrace_race_test.go  agenttrace_test.go  checkpoint.go  checkpoint_test.go  context.go  fileops.go  fileops_test.go  git.go  git_test.go  go.mod  observation.go  prompt.go  prompt_test.go  terminal.go  terminal_test.go  trace.go
sdk/python/: pyproject.toml
sdk/python/agenttrace/: __init__.py  checkpoint.py  client.py  context.py  decorators.py  fileops.py  generation.py  git.py  prompt.py  terminal.py
sdk/python/agenttrace/integrations/: __init__.py  anthropic.py  langchain.py  llamaindex.py  openai.py
sdk/python/agenttrace/transport/: __init__.py  batch.py  http.py
sdk/python/tests/: __init__.py  test_checkpoint.py  test_client.py  test_fileops.py  test_git.py  test_terminal.py
sdk/typescript/: package.json  tsconfig.json  tsup.config.ts
web/: Dockerfile  middleware.ts  next.config.ts  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx
web/hooks/: use-audit-logs.ts  use-checkpoints.ts  use-datasets.ts  use-evaluators.ts  use-metrics.ts  use-prompts.ts  use-realtime.ts  use-scores.ts  use-sso.ts  use-trace.ts  use-traces.ts
web/lib/: api.ts  auth.ts  utils.ts
(+345 files in other folders)
